--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.aloe/com.example.aloe.HelloApplication</mainClass>
+                            <mainClass>com.example.aloe/com.example.aloe.Main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
