--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
                     <execution>
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.aloe.Main1</mainClass>
+                            <mainClass>com.example.aloe.Main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
