--- a/pom.xml
+++ b/pom.xml
@@ -125,8 +125,11 @@
             <artifactId>tika-core</artifactId>
             <version>2.9.2</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>net.lingala.zip4j</groupId>
+            <artifactId>zip4j</artifactId>
+            <version>2.11.5</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
