--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,12 @@
             <artifactId>zip4j</artifactId>
             <version>2.11.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.23.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
