Added setting for use icons in menu
Added setting for use icons in menu

--- a/src/main/resources/assets/settings.json
+++ b/src/main/resources/assets/settings.json
@@ -2,6 +2,7 @@
   "menu": {
     "use-menu": true,
     "position": "left",
-    "divider-position": 0.2
+    "divider-position": 0.2,
+    "use-icon": true
   }
 }
