Added setting for use title in menu
Added setting for use title in menu

--- a/src/main/resources/assets/settings.json
+++ b/src/main/resources/assets/settings.json
@@ -3,6 +3,7 @@
     "use-menu": true,
     "position": "left",
     "divider-position": 0.2,
-    "use-icon": true
+    "use-icon": true,
+    "use-text": true
   }
 }
