Added setting for chose start folder in files
Added setting for chose start folder in files

--- a/src/main/resources/assets/settings.json
+++ b/src/main/resources/assets/settings.json
@@ -8,6 +8,8 @@
   },
   "files": {
     "show-hidden": false,
-    "use-binary-units": true
+    "use-binary-units": true,
+    "start-folder": "home",
+    "start-folder-location": ""
   }
 }
