Added settings  to delete the archive after extract in files
Added settings  to delete the archive after extract in files

--- a/src/main/resources/assets/settings.json
+++ b/src/main/resources/assets/settings.json
@@ -10,6 +10,7 @@
     "show-hidden": false,
     "use-binary-units": true,
     "start-folder": "home",
-    "start-folder-location": ""
+    "start-folder-location": "",
+    "delete-archive-after-extract": false
   }
 }
