Added settings to display thumbnails in files
Added settings to display thumbnails in files

--- a/src/main/resources/assets/settings.json
+++ b/src/main/resources/assets/settings.json
@@ -11,6 +11,7 @@
     "use-binary-units": true,
     "start-folder": "home",
     "start-folder-location": "",
-    "delete-archive-after-extract": false
+    "delete-archive-after-extract": false,
+    "display-thumbnails": true
   }
 }
