--- a/src/main/resources/assets/settings.json
+++ b/src/main/resources/assets/settings.json
@@ -12,6 +12,7 @@
     "start-folder": "home",
     "start-folder-location": "",
     "delete-archive-after-extract": false,
-    "display-thumbnails": true
+    "display-thumbnails": true,
+    "file-box-size": 1.0
   }
 }
