Added option in settings to choose grid/list view for files
Added option in settings to choose grid/list view for files

--- a/src/main/resources/assets/settings.json
+++ b/src/main/resources/assets/settings.json
@@ -8,6 +8,7 @@
   },
   "files": {
     "show-hidden": false,
+    "view": "grid",
     "use-binary-units": true,
     "start-folder": "home",
     "start-folder-location": "",
