Added ability to choose language
Added ability to choose language in settings

--- a/src/main/resources/assets/settings.json
+++ b/src/main/resources/assets/settings.json
@@ -15,5 +15,8 @@
     "delete-archive-after-extract": false,
     "display-thumbnails": true,
     "file-box-size": 1.0
+  },
+  "language": {
+    "lang": "en"
   }
 }
