--- a/src/main/resources/assets/settings.json
+++ b/src/main/resources/assets/settings.json
@@ -14,7 +14,8 @@
     "start-folder-location": "",
     "delete-archive-after-extract": false,
     "display-thumbnails": true,
-    "file-box-size": 1.0
+    "file-box-size": 1.0,
+    "display-directories-before-files": true
   },
   "language": {
     "lang": "en"
