--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,11 @@
             <artifactId>xz</artifactId>
             <version>1.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.drewnoakes</groupId>
+            <artifactId>metadata-extractor</artifactId>
+            <version>2.18.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
