--- a/src/main/resources/assets/settings.json
+++ b/src/main/resources/assets/settings.json
@@ -14,6 +14,7 @@
     "start-folder": "home",
     "start-folder-location": "",
     "delete-archive-after-extract": false,
+    "use-double-click": true,
     "display-thumbnails": true,
     "file-box-size": 1.0,
     "display-directories-before-files": true
