Added option in settings to unpack archive after click on it
Added option in settings to unpack archive after click on it

--- a/src/main/resources/assets/settings.json
+++ b/src/main/resources/assets/settings.json
@@ -14,6 +14,7 @@
     "start-folder": "home",
     "start-folder-location": "",
     "delete-archive-after-extract": false,
+    "extract-on-click": false,
     "use-double-click": true,
     "display-thumbnails": true,
     "file-box-size": 1.0,
