--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,11 @@
             <artifactId>metadata-extractor</artifactId>
             <version>2.18.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.kokorin.jaffree</groupId>
+            <artifactId>jaffree</artifactId>
+            <version>2024.08.29</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
