Added saving window size
Added saving window size

--- a/src/main/resources/assets/settings.json
+++ b/src/main/resources/assets/settings.json
@@ -27,5 +27,9 @@
   "appearance": {
     "theme": "light",
     "color": "#62d0de"
+  },
+  "other": {
+    "width": 975.0,
+    "height": 550.0
   }
 }
