--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,11 @@
             <artifactId>jaffree</artifactId>
             <version>2024.08.29</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.oshi</groupId>
+            <artifactId>oshi-core</artifactId>
+            <version>6.8.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
